--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,10 @@ body {
     width: 13em;
     background: #141;
 
+    p {
+      color: #dfd;
+      text-decoration: underline;
+    }
     ul {
       padding: 0;
       li {
@@ -71,3 +75,4 @@ body {
     }
   }
 }
+
