--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <p id='notice'><%= notice %></p>
+  <!--<p id='notice'><%# notice %></p>-->
 <% end %>
 
 <div class="page-header">
@@ -12,11 +12,13 @@
       <div class="entry">
         <%= image_tag(product.image_url) %>
         <h3><%= product.title %></h3>
-        <%= sanitize(product.description) %>
+        <p><%= sanitize(product.description) %></p>
         <div class="price_line">
           <span class="price"><%= number_to_currency(product.price) %></span>
+          <%= button_to 'Add to Cart', line_items_path(product), class: 'btn btn-success btn-sm' %>
         </div>
       </div>
     <% end %>
   <% end %>
 <% end %>
+
