--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,21 +1,1 @@
-<h2>Your Pragmatic Cart</h2>
-
-<table>
-  <% @cart.line_items.each do |item| %>
-    <tr>
-      <td><%= item.quantity %> &times;&nbsp</td>
-      <td><%= item.product.title %></td>
-      <td class="item_price"><%= number_to_currency(item.line_item_price) %></td>
-      <td class="delete_button"><%= button_to 'Remove', item, class: 'btn btn-danger btn-xs', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-
-  <tr class="total_line">
-    <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-  </tr>
-</table>
-
-<%= link_to 'Keep Shopping', store_path, class: 'btn btn-success' %>
-<br/><br/>
-<%= button_to 'Empty Cart', @cart, class: 'btn btn-warning btn-sm', method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= render @cart %>
